--- a/css/pharmacy/common.css
+++ b/css/pharmacy/common.css
@@ -49,12 +49,21 @@
     justify-content: space-between;
     padding: 0 20px;
     border-radius: 8px 8px 0 0;
+    position: relative;
 }
 
 .content-title {
     font-size: 15px;
     color: #333;
     font-weight: bold;
+}
+
+.content-body {
+    padding: 20px;
+    height: calc(100% - 50px);
+    overflow-y: auto;
+    box-sizing: border-box;
+    border: 1px solid transparent;
 }
 
 .close-button {
