--- a/css/pharmacy/prepare.css
+++ b/css/pharmacy/prepare.css
@@ -46,7 +46,7 @@
     cursor: pointer;
     display: flex;
     align-items: center;
-    vertical-align: center;
+    justify-content: center;
     transition: background-color 0.3s ease;
 }
 
